Literature: fix indexing on subnetwork

--- a/notes/literature/references.bib
+++ b/notes/literature/references.bib
@@ -35,12 +35,14 @@
 
 
 
-@inproceedings{casper2022graphical,
-	  title={Graphical clusterability and local specialization in deep neural networks},
-	    author={Casper, Stephen and Hod, Shlomi and Filan, Daniel and Wild, Cody and Critch, Andrew and Russell, Stuart},
-	      booktitle={ICLR 2022 Workshop on PAIR $\{$$\backslash$textasciicircum$\}$ 2Struct: Privacy, Accountability, Interpretability, Robustness, Reasoning on Structured Data},
-	        year={2022}
+@inproceedings{casper2022graphical, title={Graphical clusterability and local
+	specialization in deep neural networks}, author={Casper, Stephen and
+	Hod, Shlomi and Filan, Daniel and Wild, Cody and Critch, Andrew and
+	Russell, Stuart}, booktitle={ICLR 2022 Workshop on PAIR2Struct:
+	Privacy, Accountability, Interpretability, Robustness, Reasoning on
+	Structured Data}, year={2022}
 }
+	
 
 @article{savarese2020winning,
   title={Winning the lottery with continuous sparsification},
@@ -88,4 +90,29 @@ url={https://openreview.net/forum?id=rJl-b3RcF7},
   organization={PMLR}
 }
 
+@article{conmy2023towards,
+  title={Towards automated circuit discovery for mechanistic interpretability},
+  author={Conmy, Arthur and Mavor-Parker, Augustine and Lynch, Aengus and Heimersheim, Stefan and Garriga-Alonso, Adri{\`a}},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  pages={16318--16352},
+  year={2023}
+}
 
+@inproceedings{
+nanda2023progress,
+title={Progress measures for grokking via mechanistic interpretability},
+author={Neel Nanda and Lawrence Chan and Tom Lieberum and Jess Smith and Jacob Steinhardt},
+booktitle={The Eleventh International Conference on Learning Representations },
+year={2023},
+url={https://openreview.net/forum?id=9XFSbDPmdW}
+}
+
+@inproceedings{
+wang2023interpretability,
+title={Interpretability in the Wild: a Circuit for Indirect Object Identification in {GPT}-2 Small},
+author={Kevin Ro Wang and Alexandre Variengien and Arthur Conmy and Buck Shlegeris and Jacob Steinhardt},
+booktitle={The Eleventh International Conference on Learning Representations },
+year={2023},
+url={https://openreview.net/forum?id=NpsVSN6o4ul}
+} 
