--- a/notes/literature/references.bib
+++ b/notes/literature/references.bib
@@ -116,3 +116,12 @@ booktitle={The Eleventh International Conference on Learning Representations },
 year={2023},
 url={https://openreview.net/forum?id=NpsVSN6o4ul}
 } 
+
+@inproceedings{
+louizos2018learning,
+title={Learning Sparse Neural Networks through L\_0 Regularization},
+author={Christos Louizos and Max Welling and Diederik P. Kingma},
+booktitle={International Conference on Learning Representations},
+year={2018},
+url={https://openreview.net/forum?id=H1Y8hhg0b},
+}
